# FactoryOS

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  registry.py
backend/app/agents/cost/: __init__.py  cost_agent.py  prompts.py
backend/app/agents/inventory/: inventory_agent.py  prompts.py
backend/app/agents/maintenance/: __init__.py  maintenance_agent.py  prompts.py
backend/app/agents/orchestrator/: manager_agent.py  prompts.py
backend/app/agents/production/: production_agent.py  prompts.py
backend/app/agents/reporting/: prompts.py  reporting_agent.py
backend/app/api/: __init__.py  router.py
backend/app/api/v1/: __init__.py  analysis.py  decisions.py  health.py  incidents.py  reports.py
backend/app/core/: __init__.py  config.py  gemini.py  logging.py
backend/app/mcp/: __init__.py  base.py  registry.py
backend/app/mcp/tools/: cost_estimator.py  incident_history.py  inventory_lookup.py  machine_history.py  (+3 more)
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  agent.py  common.py  incident.py  recovery.py
backend/app/security/: __init__.py
backend/app/services/: __init__.py  ai_platform.py
backend/app/skills/: __init__.py  base.py  cost_analysis.py  downtime_estimation.py  executive_summary.py  incident_classification.py  risk_assessment.py
backend/app/utils/: __init__.py
backend/tests/: __init__.py  test_analysis.py
(+28 files in other folders)
